<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/actionbar"
        style="@style/Titlebar"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/actionbar_logo"
            style="@style/Titlebar.Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/actionbar_icon_cd"
            android:src="@drawable/actionbar_logo" />

        <TextView
            android:id="@+id/actionbar_title"
            style="@style/Titlebar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/actionbar_logo"
            android:layout_toRightOf="@id/actionbar_logo"
            android:text="" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="151dp"
        android:layout_marginLeft="35dp"
        android:text="Login" />

    <EditText
        android:id="@+id/login_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_pw"
        android:layout_alignLeft="@+id/login_pw"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/user" />

    <TextView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="Interaktive Vorlesung Dozent"
        tools:context=".Login" />

</RelativeLayout>
