<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        
        <TextView
        android:id="@+id/tx_collection_name_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textAppearance="?android:attr/textAppearanceMedium" /> 
        
        <LinearLayout
            android:id="@+id/ll_collection_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="2dp"
            android:layout_below="@+id/tx_collection_name_open"
            android:scrollbars="horizontal">
        </LinearLayout>
        
         <RelativeLayout 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp">
            
            <ImageView
	            android:id="@+id/img_open"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"	            
	            android:src="@drawable/ic_online" />
             
            <TextView
		       	android:id="@+id/tx_collection_state"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_below="@+id/img_open"
				android:text="@string/open"
				android:gravity="center_horizontal"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </RelativeLayout>
          
        <TextView
        android:id="@+id/tx_collection_qcount_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="3dp"
        android:layout_marginRight="2dp"
        android:layout_below="@id/ll_collection_count"
        android:textSize="12sp"
        android:textColor="#999" />
        
        <Button
        android:id="@+id/btn_collection_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tx_collection_qcount_open"
        android:layout_marginTop="1dp"
        android:text="@string/btn_close_collection" />
        
        <Button
        android:id="@+id/btn_collection_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tx_collection_qcount_open"
        android:layout_marginTop="3dp"
        android:text="@string/btn_refresh" />

       
    
</RelativeLayout>