<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dedede" >
	<RelativeLayout
        android:id="@+id/actionbar"
        style="@style/Titlebar"
        android:layout_alignParentTop="true"
        android:gravity="top" >
		<ImageButton 
		    android:id="@+id/actionbar_logo"
		    android:src="@drawable/ic_menu_iv"
		    style="@style/Titlebar.Logo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:contentDescription="@string/actionbar_icon_cd"
		    android:layout_alignParentLeft="true"
		    android:onClick="actionbarClick"
		/>
        <ImageButton
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/actionbar_back_cd"
            android:src="@drawable/actionbar_up" 
            android:onClick="actionbarClick"
            />
        
        <RelativeLayout 
            android:id="@+id/counter_wrapper"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/counter_devider"
            android:layout_marginRight="10dp"
            >
            <TextView 
                android:id="@+id/question_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                style="@style/QuestionCounter"
              	/>
            <TextView 
                android:id="@+id/question_overall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                style="@style/QuestionOverall"
                />
        </RelativeLayout>
        
       	<TextView 
       	    android:id="@+id/tx_actionbar"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_toRightOf="@id/actionbar_logo"
       	    android:layout_toLeftOf="@id/counter_wrapper"
       	    android:layout_alignBottom="@id/actionbar_logo"
       	    android:singleLine="true"
       	    style="@style/Titlebar.Title"
       	    />
        
    </RelativeLayout>
    
	<RelativeLayout 
	    android:id="@+id/navigation_wrapper"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:layout_alignParentBottom="true"
	    android:visibility="gone"
	    >
	    <Button 
	        android:id="@+id/btn_prev"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/archive_btn_prev"
	        android:layout_alignParentLeft="true"
	        android:onClick="navigationClick"
	        />
	    <Button 
	        android:id="@+id/btn_next"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/archive_btn_next"
	        android:layout_alignParentRight="true"
	        android:onClick="navigationClick"
	        />
	</RelativeLayout>
	
	<RelativeLayout 
        android:id="@+id/v_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar"
        android:layout_above="@id/navigation_wrapper"
        android:background="#dedede"
        >
	    <ScrollView
	        android:id="@+id/sv_content"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentBottom="true"
	        android:background="#dedede"
	        android:visibility="gone"
	        >
	        <TextView 
	            android:id="@+id/tx_question"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            />
		</ScrollView>
		<TextView 
	         android:id="@+id/tx_empty_info"
	         android:layout_height="wrap_content"
	         android:layout_width="wrap_content"
	         android:layout_centerInParent="true"
	         android:visibility="gone"
	         android:text="Keine Fragen vorhanden!"
	         />
	</RelativeLayout>

</RelativeLayout>
